--- a/stylesheets/fileView.css
+++ b/stylesheets/fileView.css
@@ -1,5 +1,9 @@
 @import url("../global.css");
 
+body {
+  overflow: hidden;
+}
+
 .fileHead {
   background-color: var(--bg-700);
   display: flex;
@@ -49,10 +53,19 @@ button.active {
 }
 
 .display {
+  overflow-y: auto;
   padding: 2rem;
+  height: 100%;
 }
 
 #rawDisplay,
 #parsedDisplay {
+  height: 100%;
   font-size: var(--text-sm);
+}
+
+#fileInput {
+  all: unset;
+  width: 100%;
+  height: 100%;
 }
